--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,11 @@
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - *
+  pull_request:
+    branches:
+      - *
+
 jobs:
   test:
     runs-on: ubuntu-18.04
