--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,12 @@
+name: ci
+
 on:
   push:
     branches:
-      - *
+      - '*'
   pull_request:
     branches:
-      - *
-
+      - '*'
 jobs:
   test:
     runs-on: ubuntu-18.04
