--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: release
 
-on: 
+on:
   release:
     types: [created]
-  
+
 jobs:
   releases-matrix:
     name: Release Go Binary
@@ -13,19 +13,17 @@ jobs:
         # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/386, darwin/amd64 
         goos: [linux, windows, darwin]
         goarch: ["386", amd64, arm]
-        exclude: 
+        exclude:
           - goos: darwin
             goarch: arm
           - goos: darwin
             goarch: "386"
     steps:
     - uses: actions/checkout@v2
-    - name: Set RELEASE_VERSION env
-      run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
     - uses: wangyoucao577/go-release-action@v1.12
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         goversion: "https://golang.org/dl/go1.15.6.linux-amd64.tar.gz"
-        ldflags: -w -s -X "github.com/Sora233/buntdb-cli/main.COMMIT=${{ env.RELEASE_VERSION }}" -X "github.com/Sora233/buntdb-cli/main.GOVERSION=go1.15.6.linux-amd64"
+        ldflags: "-w -s -X 'github.com/Sora233/buntdb-cli/main.COMMIT=${{ github.sha }}' -X 'github.com/Sora233/buntdb-cli/main.GOVERSION=go1.15.6.linux-amd64'"
